--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,8 +90,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
 
     // Coil
-    implementation 'io.coil-kt:coil:1.3.2'
-    implementation 'com.google.accompanist:accompanist-coil:0.15.0'
+    implementation 'io.coil-kt:coil-compose:1.3.2'
+    //implementation 'com.google.accompanist:accompanist-coil:0.15.0'
 
     //Dagger - Hilt
     implementation 'com.google.dagger:hilt-android:2.38.1'
